<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/BtuColor"
            app:title="возврат"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:background="#FFFFFF"
            tools:ignore="InvalidId"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/flagImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/flag_desc" />

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flagImageView"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/question_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/questionTextView"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/option1Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option1" />

                <Button
                    android:id="@+id/option2Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option2" />

                <Button
                    android:id="@+id/option3Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option3" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Оставшееся количество попыток:"/>

                    <TextView
                        android:id="@+id/flag"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="10"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
